--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,23 @@ group 'scala-gradle'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'scala'
+apply plugin: 'idea'
 
 //sourceCompatibility = 1.5
 
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
+/*
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile "org.scala-lang:scala-library:2.11.7"
     testCompile "junit:junit:4.11"
 }
+*/
 
 task "create-dirs" {
     doLast {
@@ -22,5 +26,17 @@ task "create-dirs" {
         sourceSets*.scala.srcDirs*.each {it.mkdirs()}
         sourceSets*.resources.srcDirs*.each {it.mkdirs()}
     }
+}
+
+dependencies{
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    compile "org.scala-lang:scala-library:2.11.7"
+    compile "org.scala-lang:scala-compiler:2.11.7"
+    testCompile "junit:junit:4.11"
+}
+task run(type: JavaExec, dependsOn: classes) {
+    main = 'com.nossin.Main'
+    classpath sourceSets.main.runtimeClasspath
+    classpath configurations.runtime
 }
 
